--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//src/main/java/com/bg/sla/bolt/CheckOrderBolt.java=UTF-8
 encoding//src/main/java/com/bg/sla/bolt/SaveMysqlBolt.java=UTF-8
 encoding//src/main/java/com/bg/sla/bolt/TranslateBolt.java=UTF-8
 encoding//src/main/java/com/bg/sla/orderTopology.java=UTF-8
+encoding//src/main/java/com/bg/windowTopN/WindowWC.java=UTF-8
 encoding//src/test/java/com/test/SendMessage.java=UTF-8
