该bolt会使用globalGrouping, 意味着所有的数据都会被发送到同一个task进行最终的排序. 	TotalRankingsBolt同样继承自AbstractRankerBolt

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,6 @@ encoding//src/main/java/com/bg/sla/bolt/SaveMysqlBolt.java=UTF-8
 encoding//src/main/java/com/bg/sla/bolt/TranslateBolt.java=UTF-8
 encoding//src/main/java/com/bg/sla/orderTopology.java=UTF-8
 encoding//src/main/java/com/bg/windowTopN/WindowWC.java=UTF-8
+encoding//src/main/java/storm/starter/tools/Rankable.java=UTF-8
+encoding//src/main/java/storm/starter/tools/Rankings.java=UTF-8
 encoding//src/test/java/com/test/SendMessage.java=UTF-8
